Куда мне пойти? V0.2

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 /Thousand_devils-test.py
 /Thousand_devils_1.py
 /Thousand_devils_1clear.py
-/Все названия.txt
-/Карточки.psd
+/Сопутствие/
 /IMG/
 /font/
 /venv/
